--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </section>
 
         <!-- Banner Section -->
-        <section class="mx-10 my-10 p-5 flex justify-center bg-zinc-200 relative dark:bg-white">
+        <section class="mx-10 my-10 p-5 flex justify-center bg-zinc-200 relative">
 
             <!-- Line Top-->
             <div class="bg-zinc-500 w-5 h-[2px] transform rotate-[135deg] absolute top-0 left-0 ml-1 my-3">
@@ -294,9 +294,9 @@
     <footer id="contact" class="flex flex-col">
         <!-- Footer1 -->
         <div class="flex justify-center max-sm:items-start items-center max-sm:gap-3 gap-5 p-5">
-                <div class="map">
+<!--                 <div class="map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3989.6769559369864!2d101.34306717496474!3d0.4823167995129633!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMMKwMjgnNTYuMyJOIDEwMcKwMjAnNDQuMyJF!5e0!3m2!1sid!2sid!4v1717155504168!5m2!1sid!2sid" class="rounded-md" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+                </div> -->
                 <div class="flex flex-col max-sm:text-[10px] max-sm:gap-1 gap-5">
                     <h1 class="max-sm:text-base text-xl font-bold">CV Satria deMongga Perdana</h1>
                     <div class="flex gap-2 items-center">
